--- a/CodeNameFive/Cell/RestaurantCustomerDetails/Notes/Notes.xib
+++ b/CodeNameFive/Cell/RestaurantCustomerDetails/Notes/Notes.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -24,25 +24,26 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Note from pickup" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y1U-af-xQf">
-                        <rect key="frame" x="15" y="5" width="327" height="16.5"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                        <rect key="frame" x="20" y="20" width="317" height="17.5"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                         <color key="textColor" name="secondaryColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pick up in store from front door Pick up in store from front door Pick up in store from front door" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VLO-jj-hvP">
-                        <rect key="frame" x="15" y="26.5" width="337" height="35"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VLO-jj-hvP">
+                        <rect key="frame" x="20" y="44.5" width="332" height="112"/>
+                        <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="VLO-jj-hvP" secondAttribute="trailing" constant="5" id="KiI-Ql-qQO"/>
-                    <constraint firstAttribute="trailing" secondItem="y1U-af-xQf" secondAttribute="trailing" constant="15" id="NYJ-wB-Akg"/>
-                    <constraint firstItem="VLO-jj-hvP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="Xsu-Jk-dZx"/>
-                    <constraint firstItem="VLO-jj-hvP" firstAttribute="top" secondItem="y1U-af-xQf" secondAttribute="bottom" constant="5" id="i9H-f9-gDo"/>
-                    <constraint firstItem="y1U-af-xQf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="ixm-Hx-Ya9"/>
-                    <constraint firstItem="y1U-af-xQf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="z7d-Ki-VwN"/>
+                    <constraint firstAttribute="trailing" secondItem="y1U-af-xQf" secondAttribute="trailing" constant="20" id="NYJ-wB-Akg"/>
+                    <constraint firstItem="VLO-jj-hvP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="Xsu-Jk-dZx"/>
+                    <constraint firstItem="VLO-jj-hvP" firstAttribute="top" secondItem="y1U-af-xQf" secondAttribute="bottom" constant="7" id="i9H-f9-gDo"/>
+                    <constraint firstItem="y1U-af-xQf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="ixm-Hx-Ya9"/>
+                    <constraint firstItem="y1U-af-xQf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="z7d-Ki-VwN"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
