--- a/CodeNameFive/Cell/RestaurantCustomerDetails/OrderDetail/orderNumber.xib
+++ b/CodeNameFive/Cell/RestaurantCustomerDetails/OrderDetail/orderNumber.xib
@@ -1,45 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="HelveticaNeue.ttc">
-            <string>HelveticaNeue</string>
-        </array>
-    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="50" id="KGk-i7-Jjw" customClass="orderNumber" customModule="CNF" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="331" height="50"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="331" height="50"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="0go-eK-Nj0">
-                        <rect key="frame" x="51" y="5" width="79" height="40"/>
+                        <rect key="frame" x="68" y="30" width="114.5" height="39"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Muhammad Ali" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GCT-Eu-qBb">
-                                <rect key="frame" x="0.0" y="0.0" width="79" height="20"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="11"/>
+                                <rect key="frame" x="0.0" y="0.0" width="114.5" height="19.5"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#7837" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ykt-la-xZu">
-                                <rect key="frame" x="0.0" y="20" width="79" height="20"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                                <rect key="frame" x="0.0" y="19.5" width="114.5" height="19.5"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                     </stackView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GAH-ad-jkK">
-                        <rect key="frame" x="15" y="11" width="28" height="28"/>
+                        <rect key="frame" x="20" y="35.5" width="28" height="28"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="28" id="8w9-LS-TZD"/>
                             <constraint firstAttribute="width" constant="28" id="jLM-KR-AEf"/>
@@ -51,11 +46,11 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="GAH-ad-jkK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="DGc-Vs-ahg"/>
-                    <constraint firstItem="0go-eK-Nj0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="JLV-bk-gQU"/>
-                    <constraint firstItem="0go-eK-Nj0" firstAttribute="leading" secondItem="GAH-ad-jkK" secondAttribute="trailing" constant="8" symbolic="YES" id="N2M-1Q-Svo"/>
+                    <constraint firstItem="GAH-ad-jkK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="DGc-Vs-ahg"/>
+                    <constraint firstItem="0go-eK-Nj0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="30" id="JLV-bk-gQU"/>
+                    <constraint firstItem="0go-eK-Nj0" firstAttribute="leading" secondItem="GAH-ad-jkK" secondAttribute="trailing" constant="20" id="N2M-1Q-Svo"/>
                     <constraint firstItem="GAH-ad-jkK" firstAttribute="centerY" secondItem="0go-eK-Nj0" secondAttribute="centerY" id="R4s-Iz-dKo"/>
-                    <constraint firstAttribute="bottom" secondItem="0go-eK-Nj0" secondAttribute="bottom" constant="5" id="fBO-6Y-DI5"/>
+                    <constraint firstAttribute="bottom" secondItem="0go-eK-Nj0" secondAttribute="bottom" constant="30" id="fBO-6Y-DI5"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
