--- a/CodeNameFive/Cell/RestaurantCustomerDetails/OrderDetail/orderNumber.xib
+++ b/CodeNameFive/Cell/RestaurantCustomerDetails/OrderDetail/orderNumber.xib
@@ -10,23 +10,23 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="50" id="KGk-i7-Jjw" customClass="orderNumber" customModule="CNF" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="331" height="50"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="KGk-i7-Jjw" customClass="orderNumber" customModule="CNF" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="331" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="331" height="50"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="331" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="0go-eK-Nj0">
-                        <rect key="frame" x="68" y="30" width="114.5" height="39"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="0go-eK-Nj0">
+                        <rect key="frame" x="68" y="20" width="243" height="40"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Muhammad Ali" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GCT-Eu-qBb">
-                                <rect key="frame" x="0.0" y="0.0" width="114.5" height="19.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="243" height="18"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#7837" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ykt-la-xZu">
-                                <rect key="frame" x="0.0" y="19.5" width="114.5" height="19.5"/>
+                                <rect key="frame" x="0.0" y="22" width="243" height="18"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -34,7 +34,7 @@
                         </subviews>
                     </stackView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GAH-ad-jkK">
-                        <rect key="frame" x="20" y="35.5" width="28" height="28"/>
+                        <rect key="frame" x="20" y="26" width="28" height="28"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="28" id="8w9-LS-TZD"/>
                             <constraint firstAttribute="width" constant="28" id="jLM-KR-AEf"/>
@@ -47,14 +47,16 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="GAH-ad-jkK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="DGc-Vs-ahg"/>
-                    <constraint firstItem="0go-eK-Nj0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="30" id="JLV-bk-gQU"/>
                     <constraint firstItem="0go-eK-Nj0" firstAttribute="leading" secondItem="GAH-ad-jkK" secondAttribute="trailing" constant="20" id="N2M-1Q-Svo"/>
                     <constraint firstItem="GAH-ad-jkK" firstAttribute="centerY" secondItem="0go-eK-Nj0" secondAttribute="centerY" id="R4s-Iz-dKo"/>
-                    <constraint firstAttribute="bottom" secondItem="0go-eK-Nj0" secondAttribute="bottom" constant="30" id="fBO-6Y-DI5"/>
+                    <constraint firstAttribute="trailing" secondItem="0go-eK-Nj0" secondAttribute="trailing" constant="20" id="Sdz-T8-dGw"/>
+                    <constraint firstItem="0go-eK-Nj0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="eBK-tc-JZ7"/>
+                    <constraint firstItem="0go-eK-Nj0" firstAttribute="leading" secondItem="GAH-ad-jkK" secondAttribute="trailing" constant="20" id="jAZ-jh-1H4"/>
+                    <constraint firstAttribute="bottom" secondItem="0go-eK-Nj0" secondAttribute="bottom" constant="20" id="mD7-nJ-uTb"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="-9.4202898550724647" y="38.169642857142854"/>
+            <point key="canvasLocation" x="-7.9710144927536239" y="-10.044642857142856"/>
         </tableViewCell>
     </objects>
     <resources>
