--- a/CodeNameFive/View/Base.lproj/Main.storyboard
+++ b/CodeNameFive/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="T1J-IK-eqS">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -401,11 +401,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QdS-WH-Pvp" customClass="GMSMapView">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="374.33333333333331"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="370.33333333333331"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progressViewStyle="bar" translatesAutoresizingMaskIntoConstraints="NO" id="Fk6-fo-gE1">
-                                <rect key="frame" x="0.0" y="374.33333333333331" width="414" height="7"/>
+                                <rect key="frame" x="0.0" y="370.33333333333331" width="414" height="7"/>
                                 <color key="tintColor" name="primaryColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="6" id="UNM-NP-pJM"/>
@@ -413,10 +413,10 @@
                                 </constraints>
                             </progressView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KOa-aQ-uNt">
-                                <rect key="frame" x="0.0" y="380.33333333333326" width="414" height="481.66666666666674"/>
+                                <rect key="frame" x="0.0" y="376.33333333333326" width="414" height="485.66666666666674"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="X5J-Bm-8lm">
-                                        <rect key="frame" x="20" y="0.0" width="374" height="418.66666666666669"/>
+                                        <rect key="frame" x="20" y="0.0" width="374" height="422.66666666666669"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nXe-wX-ya3">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="0.0"/>
@@ -477,13 +477,13 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JlH-oy-Uvk">
-                                                <rect key="frame" x="0.0" y="348.66666666666669" width="374" height="30"/>
+                                                <rect key="frame" x="0.0" y="348.66666666666669" width="374" height="34"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y1X-AN-HG8">
-                                                        <rect key="frame" x="138" y="0.0" width="98" height="30"/>
+                                                        <rect key="frame" x="138" y="0.0" width="98" height="34"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rs. 33.87" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pGf-n6-LJg">
-                                                                <rect key="frame" x="10" y="10" width="78" height="10"/>
+                                                                <rect key="frame" x="10" y="10" width="78" height="14"/>
                                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
@@ -492,8 +492,7 @@
                                                         <color key="backgroundColor" name="primaryButton"/>
                                                         <constraints>
                                                             <constraint firstAttribute="bottom" secondItem="pGf-n6-LJg" secondAttribute="bottom" constant="10" id="52Q-WA-DS9"/>
-                                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="pGf-n6-LJg" secondAttribute="trailing" constant="10" id="BH3-s1-YCx"/>
-                                                            <constraint firstItem="pGf-n6-LJg" firstAttribute="centerX" secondItem="y1X-AN-HG8" secondAttribute="centerX" id="Wed-Pm-zbk"/>
+                                                            <constraint firstAttribute="trailing" secondItem="pGf-n6-LJg" secondAttribute="trailing" constant="10" id="BH3-s1-YCx"/>
                                                             <constraint firstItem="pGf-n6-LJg" firstAttribute="leading" secondItem="y1X-AN-HG8" secondAttribute="leading" constant="10" id="azs-er-sZ3"/>
                                                             <constraint firstItem="pGf-n6-LJg" firstAttribute="top" secondItem="y1X-AN-HG8" secondAttribute="top" constant="10" id="nYq-fF-8Td"/>
                                                         </constraints>
@@ -508,12 +507,12 @@
                                                 <constraints>
                                                     <constraint firstAttribute="bottom" secondItem="y1X-AN-HG8" secondAttribute="bottom" id="LPT-Rh-ta8"/>
                                                     <constraint firstItem="y1X-AN-HG8" firstAttribute="centerX" secondItem="JlH-oy-Uvk" secondAttribute="centerX" id="WF6-iR-SOH"/>
-                                                    <constraint firstAttribute="height" constant="30" id="edg-1z-1r2"/>
+                                                    <constraint firstAttribute="height" constant="34" id="edg-1z-1r2"/>
                                                     <constraint firstItem="y1X-AN-HG8" firstAttribute="top" secondItem="JlH-oy-Uvk" secondAttribute="top" id="flp-uQ-3th"/>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PFN-pX-f6c">
-                                                <rect key="frame" x="0.0" y="388.66666666666669" width="374" height="30"/>
+                                                <rect key="frame" x="0.0" y="392.66666666666669" width="374" height="30"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NBg-ay-Q6v">
                                                         <rect key="frame" x="164.66666666666666" y="5.6666666666666288" width="44.666666666666657" height="19"/>
@@ -547,7 +546,7 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JYU-dK-oja">
-                                        <rect key="frame" x="20" y="430.66666666666669" width="374" height="50"/>
+                                        <rect key="frame" x="20" y="434.66666666666669" width="374" height="50"/>
                                         <color key="backgroundColor" name="primaryButton"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="Iaq-pc-hef"/>
