--- a/CodeNameFive/Cell/RestaurantCustomerDetails/CollectCash/CollectCash.xib
+++ b/CodeNameFive/Cell/RestaurantCustomerDetails/CollectCash/CollectCash.xib
@@ -24,19 +24,19 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="case" translatesAutoresizingMaskIntoConstraints="NO" id="9y5-la-7qo">
-                        <rect key="frame" x="10" y="5" width="24" height="28"/>
+                        <rect key="frame" x="20" y="5" width="28" height="28"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="24" id="X5L-0g-8cH"/>
+                            <constraint firstAttribute="width" constant="28" id="X5L-0g-8cH"/>
                             <constraint firstAttribute="height" constant="28" id="qIr-cw-fIH"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Collect cash from the customer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HYD-la-oNx">
-                        <rect key="frame" x="51" y="5" width="140.5" height="28"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="10"/>
+                        <rect key="frame" x="53" y="5" width="168.5" height="28"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4z7-kZ-ert">
-                        <rect key="frame" x="278" y="11" width="32" height="16"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rs. 2,000.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4z7-kZ-ert">
+                        <rect key="frame" x="236.5" y="11" width="73.5" height="16"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
                         <color key="textColor" name="secondaryColor"/>
                         <nil key="highlightedColor"/>
@@ -45,9 +45,9 @@
                 <constraints>
                     <constraint firstItem="9y5-la-7qo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="0ho-IM-Bok"/>
                     <constraint firstItem="HYD-la-oNx" firstAttribute="centerY" secondItem="9y5-la-7qo" secondAttribute="centerY" id="MZm-6s-lb0"/>
-                    <constraint firstItem="9y5-la-7qo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="NGB-KV-UI2"/>
+                    <constraint firstItem="9y5-la-7qo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="NGB-KV-UI2"/>
                     <constraint firstAttribute="bottom" secondItem="HYD-la-oNx" secondAttribute="bottom" constant="5" id="Qv8-A8-jmG"/>
-                    <constraint firstItem="HYD-la-oNx" firstAttribute="leading" secondItem="9y5-la-7qo" secondAttribute="trailing" constant="17" id="c7B-d5-wZH"/>
+                    <constraint firstItem="HYD-la-oNx" firstAttribute="leading" secondItem="9y5-la-7qo" secondAttribute="trailing" constant="5" id="c7B-d5-wZH"/>
                     <constraint firstAttribute="trailing" secondItem="4z7-kZ-ert" secondAttribute="trailing" constant="10" id="kOK-0Y-0Gv"/>
                     <constraint firstItem="4z7-kZ-ert" firstAttribute="centerY" secondItem="HYD-la-oNx" secondAttribute="centerY" id="o1e-9I-oGX"/>
                     <constraint firstAttribute="bottom" secondItem="9y5-la-7qo" secondAttribute="bottom" constant="5" id="rZn-eY-cdF"/>
